--- a/Client Side/manifest.json
+++ b/Client Side/manifest.json
@@ -11,7 +11,9 @@
     "storage",
     "notifications",
     "contextMenus",
-    "tabs"
+    "tabs",
+    "http://*/",
+    "https://*/"
   ],
 
   "browser_action": {
