--- a/Client Side/manifest.json
+++ b/Client Side/manifest.json
@@ -2,8 +2,7 @@
   "manifest_version": 2,
 
   "name": "Lexicon",
-  "description": "Lexicon is a chrome extension to save all the words that you search frequently on 
-  google while reading any article. It will help you to memorize the words for your further reference.",
+  "description": "Lexicon stores your frequently searched english words on google, so that you can memorize those words for your further reference.",
   "version": "1.0",
 
   "permissions": [
@@ -16,8 +15,12 @@
     "https://*/"
   ],
 
+  "icons": { "16": "icon16.png",
+           "48": "icon48.png",
+          "128": "icon128.png" },
+
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon16.png",
     "default_popup": "popup.html"
   }
 }
